src/parser/snapshots/texlab__parser__latex__tests__parse@theorem_definition__theorem_definition_only_name.txt.snap
---
source: src/parser/latex.rs
expression: root
input_file: src/parser/test_data/latex/theorem_definition/theorem_definition_only_name.txt
---
ROOT@0..16
  PREAMBLE@0..16
    THEOREM_DEFINITION@0..16
      THEOREM_DEFINITION_NAME@0..11 "\\newtheorem"
      CURLY_GROUP_WORD@11..16
        L_CURLY@11..12 "{"
        KEY@12..15
          WORD@12..15 "foo"
        R_CURLY@15..16 "}"

